# otkpp

./: Algorithms.md  CMakeLists.txt  Installation.md  OTKpp.md  PKG-INFO  ProjectHome.md  PyOTK.md  QtGUI.md  README  io_utils.hpp  native.cpp  plotutils.cpp
constraints/: BoundConstraints.cpp
function/: CompiledFunctionEvaluator.h  EvalCountable.h  HessianEvaluator.cpp  HessianEvaluator.h  SymbolicFunctionEvaluator.cpp  SymbolicFunctionEvaluator.h  SymbolicGradientEvaluator.cpp  SymbolicHessianEvaluator.cpp
lib/: CMakeLists.txt  Cloneable.h  OTK.cpp
linalg/: BFGSUpdater.h  InvLBFGSUpdater.cpp  InvLBFGSUpdater.h  SR1Updater.cpp  SR1Updater.h
localsolvers/: AbstractGradientSolver.cpp  AbstractGradientSolver.h  ExternalSolver.cpp  ExternalSolver.h  Solver.cpp
localsolvers/gslsolvers/: GSLFSolver.cpp
localsolvers/lbfgsb/: CMakeLists.txt  LBFGSB.cpp
localsolvers/lmbm/: LMBM.cpp  func_wrapper.cpp
localsolvers/native/: CMakeLists.txt  ConjGradMT.cpp  DoglegBFGS.cpp  GradientSolver.cpp  HookeJeeves.h  LinminBFGS.h  MNewton.cpp  MNewton.h  NativeNEWUOA.h  NativeSolver.h  PARTAN.cpp  PARTAN.h  SteihaugSR1.cpp  SteihaugSR1.h
localsolvers/native/linmin/: CMakeLists.txt  LineMinimizer.cpp  LineMinimizer.h  MoreThuente.cpp  MoreThuente.h  PolyFit.cpp
localsolvers/native/trsreg/: DoglegSolver.cpp  ModelFunction.cpp  SteihaugSolver.h  TrustRegionSolver.cpp
otkpp/: CMakeLists.txt  Doxyfile  config.h.cmake
otkpp/constraints/: BoundConstraints.cpp  BoundConstraints.h  Constraints.h
otkpp/function/: FDiffGradientEvaluator.h  FDiffHessianEvaluator.h  Function.cpp  Function.h  FunctionEvaluator.cpp  GradientEvaluator.h  SymbolicFunctionEvaluator.h  SymbolicGradientEvaluator.h  SymbolicHessianEvaluator.cpp  SymbolicHessianEvaluator.h
otkpp/globalsolvers/: BranchBound.cpp  BranchBound.h
otkpp/interpolation/: LinInterp.cpp  LinInterp.h  QuadInterp.cpp  QuadInterp.h
otkpp/lib/: CMakeLists.txt
otkpp/linalg/: CMakeLists.txt  LBFGSUpdater.cpp  cholesky.hpp
otkpp/localsolvers/: AbstractGradientSolver.cpp  AbstractGradientSolver.h  CMakeLists.txt  GradientSolverBase.cpp  Solver.h
otkpp/objfunc/: FDiffGradientEvaluator.cpp  FDiffHessianEvaluator.cpp  FDiffHessianEvaluator.h  Function.h  FunctionEvaluator.h  GradientEvaluator.h  HessianEvaluator.cpp  SymbolicGradientEvaluator.cpp
otkpp/qtgui/: CMakeLists.txt
otkpp/qtgui/src/: logarithmiccolormap.cpp  logarithmiccolormap.h  minimizerthread.cpp  otkgui.cpp  otkguiapplication.h  otkguimodel.cpp  otkguimodel.h  searchlineplot.cpp  searchlineplot.h  surfaceplot.h
otkpp/solvers/: GradientSolverBase.h  Solver.h
otkpp/stopcrit/: CMakeLists.txt  CompoundStoppingCriterion.cpp  CompoundStoppingCriterion.h  FDistToMinTest.cpp  FDistToMinTest.h  GradNormTest.cpp  StoppingCriterion.h  XDistToMinTest.h
otkpp/testproblems/: MGHTestFunction.h
otkpp/tests/: CMakeLists.txt  otktest.cpp  solvertests.cpp
pyotk/: README  constraints.hpp  convergence.py  functions.hpp  io_utils.hpp  native.cpp  numpy_utils.hpp  scaling.py  setup.py  solver_utils.hpp  solvers.hpp
pyotk/pyotk/: convergence.py  perfprof.py  plot2d.py  scaling.py  startingpoint.py  testproblems.py
qtgui/src/: contourdata.h  iterationplot.cpp  main.cpp  minimizerthread.cpp  minimizerthread.h  otkgui.cpp  otkguiapplication.cpp  plotiterpath.cpp  plotsimplexmesh.cpp  (+3 more)
stopcrit/: FDistToMinTest.h  GradNormTest.cpp  XDistToMinTest.cpp
testproblems/: MGHTestFunction.cpp
trunk/: README
trunk/otkpp/: CMakeLists.txt  README
trunk/otkpp/constraints/: BoundConstraints.h  CMakeLists.txt
trunk/otkpp/function/: CMakeLists.txt  FDiffGradientEvaluator.cpp  Function.cpp  Function.h  FunctionEvaluator.h  GradientEvaluator.h  HessianEvaluator.h
trunk/otkpp/interpolation/: QuadInterp.cpp  QuadInterp.h
trunk/otkpp/lib/: CMakeLists.txt
trunk/otkpp/linalg/: LBFGSUpdater.h  QuasiNewtonUpdater.h
trunk/otkpp/localsolvers/: AbstractGradientSolver.cpp  ExternalSolver.h  GradientSolverBase.cpp  GradientSolverBase.h  Solver.cpp  Solver.h
trunk/otkpp/localsolvers/gslsolvers/: CMakeLists.txt  GSLFDFSolver.cpp  GSLFDFSolver.h  GSLFSolver.cpp  GSLFSolver.h
trunk/otkpp/localsolvers/lbfgsb/: LBFGSB.cpp  LBFGSB.h  routines.f
trunk/otkpp/localsolvers/lmbm/: LMBM.h  lmbm_utils.h  tlmbm.f
trunk/otkpp/localsolvers/native/: ConjGradMT.cpp  ConjGradMT.h  DSQA.cpp  DSQA.h  DoglegBFGS.cpp  DoglegBFGS.h  GradientSolver.cpp  GradientSolver.h  HookeJeeves.cpp  HookeJeeves.h  LRWWSimplex.cpp  LRWWSimplex.h  LevenbergMarquardt.cpp  LinminBFGS.cpp  LinminBFGS.h  MNewton.cpp  MNewton.h  NativeGradientSolver.cpp  NativeGradientSolver.h  NativeSolver.cpp  NativeSolver.h  PARTAN.cpp  PARTAN.h  SteihaugSR1.cpp  SteihaugSR1.h
trunk/otkpp/localsolvers/native/linmin/: Backtracking.cpp  Backtracking.h  Fletcher.cpp  Fletcher.h  MoreThuente.h
trunk/otkpp/localsolvers/native/trsreg/: TrustRegionSolver.h
trunk/otkpp/localsolvers/newuoa/: NEWUOA.cpp  func_wrapper.cpp
trunk/otkpp/objfunc/: CompiledFunctionEvaluator.cpp  GradientEvaluator.cpp  HessianEvaluator.h  SymbolicFunctionEvaluator.h
trunk/otkpp/qtgui/: CMakeLists.txt
trunk/otkpp/qtgui/src/: contourdata.cpp  iterationplot.h  mainwindow.ui  minimizerthread.cpp  otkgui.cpp  otkgui.h  otkguimodel.cpp  otkguimodel.h  searchlineplot.cpp  surfacefunction.h
trunk/otkpp/solvers/: CMakeLists.txt  Solver.h
trunk/otkpp/solvers/gslsolvers/: GSLFDFSolver.h  GSLFSolver.h
trunk/otkpp/solvers/native/: CMakeLists.txt  ConjGradMT.h  DSQA.h  LRWWSimplex.cpp  LinminBFGS.h  NativeGradientSolver.cpp  NativeSolver.h  PARTAN.h  SteihaugSR1.h
trunk/otkpp/solvers/native/linmin/: LineMinimizer.h
trunk/otkpp/solvers/native/trsreg/: CMakeLists.txt  DoglegSolver.h  SteihaugSolver.h  TrustRegionSolver.cpp
trunk/otkpp/stopcrit/: CompoundStoppingCriterion.cpp  CompoundStoppingCriterion.h  GradNormTest.h  StoppingCriterion.h  XDistToMinTest.h
trunk/otkpp/testproblems/: CMakeLists.txt  MGHTestFunction.h
trunk/otkpp/tests/: CMakeLists.txt  otktest.cpp  solvertests.cpp
wiki/: Algorithms.wiki  Installation.wiki  OTKpp.wiki  PageName.wiki  PyOTK.wiki  QtGUI.wiki
(+155 files in other folders)
