
INCLUDE_DIRECTORIES(${OTKPP_INCLUDE_DIRS})

ADD_EXECUTABLE(otktest otktest.cpp)

TARGET_LINK_LIBRARIES(otktest otkpp rt)

IF(WITH_FORTRAN)
  TARGET_LINK_LIBRARIES(otktest otkpp_fortran)
ENDIF(WITH_FORTRAN)

IF(WITH_GSL)
  TARGET_LINK_LIBRARIES(otktest gsl gslcblas)
ENDIF(WITH_GSL)

IF(WITH_LIBMATHEVAL)
  TARGET_LINK_LIBRARIES(otktest matheval)
ENDIF(WITH_LIBMATHEVAL)

INSTALL(TARGETS otktest DESTINATION bin)
